# reflex_project

./: pyproject.toml  requirements.txt  rxconfig.py
reflex_project/reflex_project/: reflex_project.py  styles.py
reflex_project/reflex_project/components/: sidebar.py
reflex_project/reflex_project/pages/: __init__.py  canvas.py  dashboard.py  index.py  record.py  sample.py  settings.py  webcamera.py
reflex_project/reflex_project/templates/: template.py
